--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           >
           <ul class="nav-list">
             <li class="nav-item">
-              <a href="./index.html" class="link">Studio</a>
+              <a href="./index.html" class="link current">Studio</a>
             </li>
             <li class="nav-item">
               <a href="" class="link">Portfolio</a>
@@ -70,6 +70,11 @@
           <h2 class="visually-hidden">Our advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-item">
+              <div class="container-advantages">
+                <svg class="advantages-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antena"></use>
+                </svg>
+              </div>
               <h3 class="strategy">Strategy</h3>
               <p class="strategy-p">
                 Our goal is to identify the business problem to walk away with
@@ -77,6 +82,11 @@
               </p>
             </li>
             <li class="advantages-item">
+              <div class="container-advantages">
+                <svg class="advantages-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="strategy">Punctuality</h3>
               <p class="strategy-p">
                 Bring the key message to the brand's audience for the best price
@@ -84,6 +94,11 @@
               </p>
             </li>
             <li class="advantages-item">
+              <div class="container-advantages">
+                <svg class="advantages-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="strategy">Diligence</h3>
               <p class="strategy-p">
                 Research and confirm brands that present the strongest digital
@@ -91,6 +106,11 @@
               </p>
             </li>
             <li class="advantages-item">
+              <div class="container-advantages">
+                <svg class="advantages-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="strategy">Technologies</h3>
               <p class="strategy-p">
                 Design practice focused on digital experiences. We bring forth a
@@ -110,6 +130,52 @@
               <div class="container-name">
                 <h3 class="name-team">Mark Guerrero</h3>
                 <p class="team-p">Product Designer</p>
+                <ul class="icon-list">
+                  <li class="icon-list-team">
+                    <a
+                      class="social-link"
+                      href="http://instagram.com"
+                      target="_blank"
+                    >
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="social-link"
+                      href="http://twitter.com"
+                      target="_blank"
+                    >
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="social-link"
+                      href="http://facebook.com"
+                      target="_blank"
+                    >
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="social-link"
+                      href="http://linkedin.com"
+                      target="_blank"
+                    >
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -118,6 +184,52 @@
               <div class="container-name">
                 <h3 class="name-team">Tom Ford</h3>
                 <p class="team-p">Frontend Developer</p>
+                <ul class="icon-list">
+                  <li class="icon-list-team">
+                    <a
+                      class="social-link"
+                      href="http://instagram.com"
+                      target="_blank"
+                    >
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="social-link"
+                      href="http://twitter.com"
+                      target="_blank"
+                    >
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="social-link"
+                      href="http://facebook.com"
+                      target="_blank"
+                    >
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="social-link"
+                      href="http://linkedin.com"
+                      target="_blank"
+                    >
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -125,6 +237,52 @@
               <div class="container-name">
                 <h3 class="name-team">Camila Garcia</h3>
                 <p class="team-p">Marketing</p>
+                <ul class="icon-list">
+                  <li class="icon-list-team">
+                    <a
+                      class="social-link"
+                      href="http://instagram.com"
+                      target="_blank"
+                    >
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="social-link"
+                      href="http://twitter.com"
+                      target="_blank"
+                    >
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="social-link"
+                      href="http://facebook.com"
+                      target="_blank"
+                    >
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="social-link"
+                      href="http://linkedin.com"
+                      target="_blank"
+                    >
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -132,6 +290,52 @@
               <div class="container-name">
                 <h3 class="name-team">Daniel Wilson</h3>
                 <p class="team-p">UI Designer</p>
+                <ul class="icon-list">
+                  <li class="icon-list-team">
+                    <a
+                      class="social-link"
+                      href="http://instagram.com"
+                      target="_blank"
+                    >
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="social-link"
+                      href="http://twitter.com"
+                      target="_blank"
+                    >
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="social-link"
+                      href="http://facebook.com"
+                      target="_blank"
+                    >
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="social-link"
+                      href="http://linkedin.com"
+                      target="_blank"
+                    >
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
