--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="icon-list-team">
                     <a
                       class="social-link"
                       href="http://twitter.com"
@@ -153,7 +153,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="icon-list-team">
                     <a
                       class="social-link"
                       href="http://facebook.com"
@@ -164,7 +164,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="icon-list-team">
                     <a
                       class="social-link"
                       href="http://linkedin.com"
@@ -196,7 +196,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="icon-list-team">
                     <a
                       class="social-link"
                       href="http://twitter.com"
@@ -207,7 +207,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="icon-list-team">
                     <a
                       class="social-link"
                       href="http://facebook.com"
@@ -218,7 +218,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="icon-list-team">
                     <a
                       class="social-link"
                       href="http://linkedin.com"
@@ -249,7 +249,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="icon-list-team">
                     <a
                       class="social-link"
                       href="http://twitter.com"
@@ -260,7 +260,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="icon-list-team">
                     <a
                       class="social-link"
                       href="http://facebook.com"
@@ -271,7 +271,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="icon-list-team">
                     <a
                       class="social-link"
                       href="http://linkedin.com"
@@ -302,7 +302,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="icon-list-team">
                     <a
                       class="social-link"
                       href="http://twitter.com"
@@ -313,7 +313,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="icon-list-team">
                     <a
                       class="social-link"
                       href="http://facebook.com"
@@ -324,7 +324,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="icon-list-team">
                     <a
                       class="social-link"
                       href="http://linkedin.com"
