--- a/index.html
+++ b/index.html
@@ -348,46 +348,96 @@
 
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img src="./images/img5.jpg" alt="Banking App" width="360" />
+              <div class="portfolio-wrapper">
+                <img src="./images/img5.jpg" alt="Banking App" width="360" />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container-portfolio">
                 <h3 class="portfolio-name">Banking App</h3>
                 <p class="portfolio-p">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/img6.jpg" alt="Cashless Payment" width="360" />
+              <div class="portfolio-wrapper">
+                <img
+                  src="./images/img6.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container-portfolio">
                 <h3 class="portfolio-name">Cashless Payment</h3>
                 <p class="portfolio-p">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/img7.jpg" alt="Meditation App" width="360" />
+              <div class="portfolio-wrapper">
+                <img src="./images/img7.jpg" alt="Meditation App" width="360" />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container-portfolio">
                 <h3 class="portfolio-name">Meditation App</h3>
                 <p class="portfolio-p">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/img8.jpg" alt="Taxi Service" width="360" />
+              <div class="portfolio-wrapper">
+                <img src="./images/img8.jpg" alt="Taxi Service" width="360" />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container-portfolio">
                 <h3 class="portfolio-name">Taxi Service</h3>
                 <p class="portfolio-p">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img9.jpg"
-                alt="Screen Illustrations"
-                width="360"
-              />
+              <div class="portfolio-wrapper">
+                <img
+                  src="./images/img9.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container-portfolio">
                 <h3 class="portfolio-name">Screen Illustrations</h3>
                 <p class="portfolio-p">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/img10.jpg" alt="Online Courses" width="360" />
+              <div class="portfolio-wrapper">
+                <img
+                  src="./images/img10.jpg"
+                  alt="Online Courses"
+                  width="360"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container-portfolio">
                 <h3 class="portfolio-name">Online Courses</h3>
                 <p class="portfolio-p">Marketing</p>
