--- a/index.html
+++ b/index.html
@@ -449,13 +449,64 @@
     </main>
     <footer class="footer-page">
       <div class="container container-footer">
-        <a href="./index.html" class="footer-logo"
-          >Web<span class="link-footer">Studio</span></a
-        >
-        <p class="footer-p">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="container-stodio">
+          <a href="./index.html" class="footer-logo"
+            >Web<span class="link-footer">Studio</span></a
+          >
+          <p class="footer-p">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="container-social">
+          <p class="social-media">Social media</p>
+          <ul class="icon-list footer-list">
+            <li class="icon-list-team">
+              <a
+                class="social-link social-link-footer"
+                href="http://instagram.com"
+                target="_blank"
+              >
+                <svg class="team-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-list-team">
+              <a
+                class="social-link social-link-footer"
+                href="http://twitter.com"
+                target="_blank"
+              >
+                <svg class="team-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-list-team">
+              <a
+                class="social-link social-link-footer"
+                href="http://facebook.com"
+                target="_blank"
+              >
+                <svg class="team-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-list-team">
+              <a
+                class="social-link social-link-footer"
+                href="http://linkedin.com"
+                target="_blank"
+              >
+                <svg class="team-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
